# re-ig

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  rev_w.opus
data/audio/bgm/: shadows.opus
data/audio/bgs/: rev_s.opus
data/audio/me/: chime.opus
data/audio/se/: fall.opus
include/: map_data.h  my_stb.h  sound.h
include/objects/: camera.h  ceil_light.h  crate.h  elevator.h  solar_system.h  vec3f.h
src/: main.c  sound.c
src/objects/: camera.c  ceil_light.c  crate.c  elevator.c  solar_system.c  vec3f.c
